<resources>
    <string name="app_name">iGuide</string>
    <string name="mapbox_access_token">sk.eyJ1IjoiY2FtbWFjZSIsImEiOiI1MDYxZjA1MDc0YzhmOTRhZWFlODBlNGVlZDgzMTcxYSJ9.Ryw8G5toQp5yloce36hu2A</string>
    <string name="map_bounding_box">(29.709354854765827,-95.35668790340424,29.731896194504913,-95.31928449869156);</string>

    <!-- Mapbox map keys-->
    <string name="floor_0_key">cammace.nc76p7k8</string>
    <string name="floor_1_key">cammace.nc77c38k</string>
    <string name="floor_2_key">cammace.nc77kk5a</string>

    <string name="userLocationNotWithinBB">Your currently not located on campus</string>

    <string name="busTrackingURL">http://uhpublic.etaspot.net/service.php?service=get_vehicles&amp;includeETAData=1&amp;orderedETAArray=1&amp;token=TESTING</string>

    <string name="noBusOnRoute">No buses currently running route</string>

    <string name="title_activity_about">About</string>
    <string name="title_activity_detailed_info">Detailed Info</string>
    <string name="title_activity_routing">Routing</string>
    <string name="title_activity_CampusIssueReportActivity">Report Campus Issue</string>
    <string name="title_activity_UserInputLocationActivity">Select Location</string>
    
    <string name="action_settings">Settings</string>
    <string name="parking">Parking</string>
    <string name="food">Food</string>
    <string name="poi">Places of Interest</string>
    <string name="store">Store</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="search_hint">Room 101</string>
    <string name="settings">Settings</string>
    <string name="help">Help &amp; Feedback</string>
    <string name="transit">Transit</string>
    <string name="campusIssues">Campus Issues</string>

    <string name="campus_loop">Campus Loop</string>
    <string name="outer_loop">Outer Loop</string>
    <string name="eastwood_erp_line">Eastwood ERP Line</string>
    <string name="erp_express">ERP Express</string>

    <string name="economy_lot">Economy Lots</string>
    <string name="faculty_lot">Faculty Lots</string>
    <string name="garage_parking">Garage Parking</string>
    <string name="student_lots">Student Lots</string>
    <string name="visitor_lots">Visitor Parking</string>



    <!-- Help Dialog Fragment -->
    <string name="about_title">About</string>
    <string name="about_description">List of credit and references, as well as, disclaimer and thanks.</string>

    <string name="get_help_title">Get help</string>
    <string name="get_help_description">Contact us inorder to receive help on a specific issue you are having.</string>

    <string name="report_map_issue_title">Report a map issue</string>
    <string name="report_map_issue_description">Wrong building name, road missing, path in wrong place, etc.</string>

    <string name="send_app_feedback_title">Send app feedback</string>
    <string name="send_app_feedback_description">"Tell us what changes you'd like to see, or bugs you've discovered."</string>

    <!-- Floor Spinner -->
    <string name="floor_level_spinner">Floor Level</string>

    <string name="floor_B">Floor -1</string>
    <string name="floor_0">Floor 1</string>
    <string name="floor_1">Floor 2</string>
    <string name="floor_2">Floor 3</string>

    <!-- SettingActivity -->
    <string name="clear_history">"Clear search history"</string>

    <string name="clear_history_alert_title">Clear search history?</string>
    <string name="clear_history_alert_message">This will permanently delete all search history.</string>
    <string name="clear_history_alert_positive">"Clear"</string>
    <string name="clear_history_alert_negative">Cancel</string>
    <string name="clear_history_alert__positive_toast_msg">Search history cleared</string>

    <string name="feedbackEmailAddress">iguide6@gmail.com</string>

    <string-array name="issue_type">
        <item>"Choose One.."</item>
        <item>Damaged property</item>
        <item>IT Department</item>
        <item>Room temperature</item>
        <item>Sidewalk light out</item>
        <item>Spill</item>
        <item>Other issue</item>
    </string-array>
    <string name="title_activity_campus_issue_detail">CampusIssueDetailActivity</string>

    <!-- fake text below for testing!!! -->
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

</resources>
