<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">

        <item
            android:id="@+id/poi"
            android:checked="false"
            android:icon="@drawable/ic_place_black_24dp"
            android:title="@string/poi" />

        <item
            android:id="@+id/parking"
            android:checked="false"
            android:icon="@drawable/ic_local_parking_black_24dp"
            android:title="@string/parking" />

    </group>

    <group
        android:id="@+id/group_transit"
        >

        <item
            android:id="@+id/campus_loop"
            android:checked="false"
            android:icon="@drawable/ic_directions_bus_black_24dp"
            android:title="@string/campus_loop" />

        <item
            android:id="@+id/outer_loop"
            android:checked="false"
            android:icon="@drawable/ic_directions_bus_black_24dp"
            android:title="@string/outer_loop" />

        <item
            android:id="@+id/eastwood_erp_line"
            android:checked="false"
            android:icon="@drawable/ic_directions_bus_black_24dp"
            android:title="@string/eastwood_erp_line" />

        <item
            android:id="@+id/erp_express"
            android:checked="false"
            android:icon="@drawable/ic_directions_bus_black_24dp"
            android:title="@string/erp_express" />

    </group>

    <group android:id="@+id/group_2">
        <item
            android:id="@+id/settings"
            android:checked="false"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />

        <item
            android:id="@+id/help"
            android:checked="false"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/help" />

    </group>
</menu>